<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Secure Messaging</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_message">New Message</string>
    <string name="title_activity_inbox">Inbox</string>
    <string name="title_activity_sent_messages">Sent Messages</string>
    <string name="enter_phone_no">Enter Phone Number</string>
	<string name="message">Message</string>
	<string name="send">Send</string>
</resources>