<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/newMsgBtn"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_new_message" />

    <Button
        android:id="@+id/inboxBtn"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_inbox" />

    <Button
        android:id="@+id/sentMsgsBtn"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_sent_messages" />

</LinearLayout>