<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewMessageActivity" >

    <TextView
        android:id="@+id/newMsgTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/title_activity_new_message"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/newMessageLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newMsgTxt"
        android:layout_below="@+id/newMsgTxt"
        android:layout_marginTop="18dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/phoneNoTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_phone_no"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/phoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />

        <TextView
            android:id="@+id/messageTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/message"
            android:layout_width="277dp"
            android:layout_height="190dp"
            android:ems="10"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/sendBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />

    </LinearLayout>

</RelativeLayout>